30-applications/nextcloud/extras/middleware-push.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: push-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /push
