30-applications/nextcloud/extras/middleware-whiteboard.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whiteboard-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /whiteboard
