30-applications/nextcloud/extras/elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-elasticsearch
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud-elasticsearch
  template:
    metadata:
      labels:
        app: nextcloud-elasticsearch
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: elasticsearch
          image: elasticsearch:9.5.2
          ports:
            - containerPort: 9200
          volumeMounts:
            - name: data
              mountPath: /usr/share/elasticsearch/data
          resources:
            requests:
              memory: 1Gi
            limits:
              memory: "1536Mi"
          readinessProbe:
            httpGet:
              path: /_cluster/health
              port: 9200
            initialDelaySeconds: 30
            periodSeconds: 15
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nextcloud-elasticsearch-data
