30-applications/nextcloud/extras/service-clamav.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-clamav
spec:
  selector:
    app: nextcloud-clamav
  ports:
    - port: 3310
      targetPort: 3310
