30-applications/nextcloud/extras/service-elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-elasticsearch
spec:
  selector:
    app: nextcloud-elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
