30-applications/nextcloud/extras/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis
spec:
  selector:
    app: nextcloud-redis
  ports:
    - port: 6379
      targetPort: 6379
