30-applications/nextcloud/extras/service-whiteboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-whiteboard
spec:
  selector:
    app: nextcloud-whiteboard
  ports:
    - port: 3002
      targetPort: 3002
